add kiosk email privacy
